--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,30 +1,30 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&family=Yellowtail&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body{
-    background: rgba(255, 255, 255, 0.90);
-    font-family: 'Roboto', sans-serif;
+body {
+  background: rgba(255, 255, 255, 0.9);
+  font-family: "Roboto", sans-serif;
 }
 
-.container{
-    max-width: 1300px;
-    padding: 0 20px;
-    margin: 0 auto;
+.container {
+  max-width: 1300px;
+  padding: 0 20px;
+  margin: 0 auto;
 }
 
-button{
-    border: none;
-    cursor: pointer;
+button {
+  border: none;
+  cursor: pointer;
 }
 
-input{
-    outline: none;
+input {
+  outline: none;
 }
 
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
