--- a/src/app/Home.scss
+++ b/src/app/Home.scss
@@ -83,7 +83,8 @@
       padding: 3px;
       position: relative;
       img {
-        width: 300px;
+        width: 250px;
+        height: 250px;
       }
       h4 {
         position: absolute;
